# sentinet_ros

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  kernel_simul.cpp  package.xml  setup.py
include/kermit/: README.md  common.h
include/kermit/camera/: AprilDetector.hpp  PosLocalizer.hpp
include/kermit/controller/: ControllerBaseInterface.hpp  ControllerInterface.hpp  controller.hpp  kermit.hpp  robot_controller.hpp
include/kermit/controller/wii/: WiiController.hpp  kermit.h  kermit.hpp  kermit_old.h  robot_control.h  wii_controller.h  wii_controller.hpp
include/kermit/kernel/: Kermit_Simul.hpp  Kernel.hpp  serial.h  teensy_msg.h  teensy_serial.h
include/kermit/localizer/: .LocalizerBaseInterface.hpp.swp  LocalizerBaseInterface.hpp  SensorPacketInterface.hpp
include/kermit/localizer_filter/: LocalizerFilter.hpp
include/kermit/mapping/: Map.py
include/kermit/math/: covariance.h  smath.h
include/kermit/utils/math/: smath.h
launch/: main.launch  simulation.launch
msg/: mars_imu.msg  path_state.msg  tof.msg
nodes/: README.md  camera.cpp  controller.cpp  kernel.cpp  stanley_control
nodes/kermit/: camera.cpp  kernel.cpp  wii_controller.cpp
nodes/simul/cpp/: camera_simul.cpp  kernel_simul.cpp  localizer_filter_simul.cpp
nodes/simul/python/: s_control  s_control_simul
nodes/simul/python/src/: stanley_control.py  stanley_control_simul.py
src/c/controller/wii/: main.c  robot_control.c  wii_controller.c
src/c/kernel/: serial.c  teensy_msg.c  teensy_serial.c  teensy_serial2.c
src/c/math/: covariance.c
src/cpp/camera/: AprilDetector.cpp  PosLocalizer.cpp
src/cpp/controller/: controller.cpp  kermit.cpp
src/cpp/controller/wii/: wii_controller.cpp
src/cpp/kernel/: Kernel.cpp
src/cpp/localizer_filter/: LocalizerFilter.cpp
src/cpp/math/: CMakeLists.txt  covariance.c  smath.cpp
srv/: ping_message.srv
stuffCode/: linearAct.py  rosMain.py
test/: utest.cpp
